fix spacing between empty pantry message and pantry

--- a/css/foodly.css
+++ b/css/foodly.css
@@ -14,7 +14,6 @@ html {
 h1,
 h3,
 h4,
-h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
@@ -31,6 +30,15 @@ h2 {
     letter-spacing: 1px;
     opacity: 1.0;
     color: #FFF;
+}
+
+h5 {
+	
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+	opacity: 1.0;
 }
 
 #h2 {
